# Effector

./: .gitignore  README.md  aggregate.py  context (1).txt  context.toml  context.txt  ingest_sweep_to_db.py  main_loop.py  patch_characterizer_prompt.py  project_context.txt  pyproject.toml  rescue_foley.py  sweep_characterizer_models.py  sweep_os_observations.py  verify_foley.py
.tmp.driveupload/: 2932  3016  3020  3024  3026  3030  3034  3038  3042  3046  3050  3056  3060  3064  3068  3076  3080  3084  3088  3092  3096  3098  3102  3106  3110  3114  3118  3122  3126  3130  3134  3138  3142  3146  3150  3154  3158  3162  3166  3170  (+2056 more)
audio/: client.py  service.py
data/: rats.db  sweep_analysis.db
docs/: index.html
effector/: bus.py  coordinator.py  executor.py  intent_router.py  main_loop_reflex.py  rat_store.py  reflex_engine.py  session.py  signal_engine.py  verifier.py
examples/: test_agent_schema.py  test_escalation_and_drift.py  test_multi_agent_debate.py
mcp/: cultivation_log.jsonl  cultivation_loop.py  registry_mcp.py
resonance_test_audio/: manifest.txt
services/: audio.py
sweep_obs_results/: background_parasite_20260403_135543.json  char_comparison_20260403_154425.json  char_comparison_20260403_162706.json  char_comparison_20260403_182743.json  char_comparison_20260403_192009.json  char_comparison_20260404_013408.json  char_comparison_20260404_023608.json  char_comparison_20260404_180218.json  deadline_state_20260403_135543.json  receptive_hour_20260403_135543.json  sterile_wasteland_20260403_135543.json  summary_20260403_135543.txt
(+154 files in other folders)
