[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "effector"
version = "1.0.0"
description = "DASP-1.0 + IEP-1.0 Multi-Agent Coordination Library"
readme = "README.md"
requires-python = ">=3.11"
dependencies = ["pydantic>=2.0", "anthropic>=0.25.0"]

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[tool.setuptools.packages.find]
where = ["."]
include = ["effector*"]

[tool.pytest.ini_options]
testpaths = ["effector/tests"]
