[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "effector"
version = "1.0.0"
description = "DASP-1.0 + IEP-1.0 Multi-Agent Coordination Library"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0", 
    "anthropic>=0.25.0",
    "typer[all]>=0.12",
    "requests>=2.31",
    "psutil>=5.9"
]

[project.optional-dependencies]
config-write = ["tomli-w>=1.0"]
dev = [
    "pytest>=7.0",
    "pytest-mock",
    "typer[all]>=0.12",
    "tomli-w>=1.0",
    "scikit-learn>=1.3",
]
audio = [
    "kokoro",
    "sounddevice",
    "diffusers==0.27.2",
    "transformers==4.38.2",
]
intention = [
    "scikit-learn>=1.3",
]

[project.scripts]
effector = "effector.cli.main:app"

[tool.setuptools.packages.find]
where = ["."]
include = ["effector*"]

[tool.pytest.ini_options]
testpaths = ["tests"]